# Trail

./: .gitignore  package-lock.json  package.json  tsconfig.base.json
apps/desktop/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: AuthGuard.tsx  CommandPalette.tsx  JobCard.tsx  JobCardModal.tsx  JobsTable.tsx  KanbanBoard.tsx  KanbanColumn.tsx  Layout.tsx  TaskBoard.tsx  TaskCard.tsx  TaskColumn.tsx
apps/desktop/src/hooks/: useAuth.tsx  useCommandPalette.ts  useJobs.ts  useTaskColumns.ts  useTasks.ts
apps/desktop/src/pages/: BoardPage.tsx  LoginPage.tsx  (+1 more)
apps/extension/: README.md  background.js  content.css  content.js  job-applications-2026-01-14 (1).csv  manifest.json  package.json  popup.html  popup.js  styles.css  tsconfig.json  vite.config.ts
apps/extension/scripts/: copy-assets.js
job-logger/: .env.example  index.html  package-lock.json  package.json  tsconfig.electron.json
job-logger/dist-electron/: main.js  main.js.map  preload.js  preload.js.map
job-logger/electron/: main.ts
job-logger/src/: App.css  App.tsx  index.css
job-logger/src/pages/: DashboardPage.tsx  LoginPage.tsx  NotFoundPage.tsx  SignupPage.tsx
schema/: 2026-03-02-add-task-board.sql  2026-03-02-roadmaps-and-links.sql  2026-03-02-task-column-canvas-position.sql  2026-03-02-task-column-types.sql  2026-03-03-task-column-size.sql  supabase-schema.sql
(+49 files in other folders)
